...
    <string name="login">Login</string>
    <string name="register_title">Register</string>
    <string name="register_subtitle">Register and find interesting story</string>
    <string name="register">Signup</string>
    <string name="to_login">Already have account? Login Here</string>
    <string name="name">Name</string>
    <string name="wrong_email_format">Wrong email format!</string>
    <string name="wrong_password_format">Password must be at least 6 character!</string>
    <string name="something_wrong">Something wrong</string>
    <string name="wrong_name_format">Invalid name!</string>
    <string name="signup_success">Account created successfully!</string>
    <string name="image_story">image story</string>
    <string name="logo_vertical">logo vertical</string>
    <string name="no_data">No Data</string>
...
